# BattleShips

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
assets/: logo.aseprite  logo.xcf
cmake/: Doxygen.cmake  Warnings.cmake
examples/: client-example.cpp  game-example.cpp  server-example.cpp
src/: common.hpp  compile_commands.json  defines.hpp  game_board.hpp  main.cpp  main_window.cpp  main_window.hpp
src/board/: board.cpp  board.hpp
src/examples/: client-example.cpp  server-example.cpp
src/game/: game.cpp  game.hpp  game_board.cpp  game_board.hpp  game_ships.cpp  game_ships.hpp  guess.hpp  guess_type.hpp
src/main_window/: main_window.cpp  main_window.hpp
src/net/: client.hpp  client_impl.hpp  common.hpp  connection.hpp  message.hpp  message_type.hpp  net.hpp  server.hpp  server_impl.hpp  tsqueue.hpp
src/network/: network.hpp  network_common.hpp
src/network/client/: client.hpp
src/network/connection/: connection.hpp
src/network/message/: message.hpp
src/network/queue/: queue.hpp
src/network/server/: server.hpp
src/ui/: button.cpp  button.hpp  selection.cpp  selection.hpp  ui.cpp  ui.hpp  ui_test_window.cpp  ui_test_window.hpp
src/windows/: main_window.cpp  main_window.hpp  windows.hpp
